[project]
name = "crawlJobs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.95.0",
    "crewai-tools>=0.32.1",
    "flask>=3.1.0",
    "pydantic>=2.10.5",
    "langchain-google-genai>=2.0.9",
    "python-dotenv>=1.0.1",
    "flask-cors>=5.0.0",
]
